RESOLVED FIXED270244
[WebGPU] WebGPU::setUncapturedScopeCallback may crash if repeatedly invoked
https://bugs.webkit.org/show_bug.cgi?id=270244
Summary [WebGPU] WebGPU::setUncapturedScopeCallback may crash if repeatedly invoked
Mike Wyrzykowski
Reported 2024-02-28 13:13:39 PST
[WebGPU] WebGPU::setUncapturedScopeCallback may crash if repeatedly invoked
Attachments
Mike Wyrzykowski
Comment 1 2024-02-28 13:13:58 PST
Mike Wyrzykowski
Comment 2 2024-02-28 13:36:52 PST
EWS
Comment 3 2024-02-28 20:39:38 PST
Committed 275478@main (1004779ce3c4): <https://commits.webkit.org/275478@main> Reviewed commits have been landed. Closing PR #25249 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.