[WebGPU] WebGPU::setUncapturedScopeCallback may crash if repeatedly invoked https://bugs.webkit.org/show_bug.cgi?id=270244 <radar://123745437>

Reviewed by Dan Glastonbury.

We can only call this once, so null-out the callback
after it has been called.

* Source/WebGPU/WebGPU/Device.mm:
(WebGPU::Device::generateAValidationError):

Canonical link: https://commits.webkit.org/275478@main